--- a/style.css
+++ b/style.css
@@ -344,3 +344,18 @@ hr{
     grid-template-columns: repeat(1,1fr);
   }
 }
+
+/* Gerlía de Imágenes */
+
+.imagen-galeria, .imagen-galeria img{
+  max-width: 275px;
+  border-radius: 4px;
+}
+
+@media (max-width:880px){
+  .galeria-platos{
+    display: flex;
+    flex-flow: wrap;
+    justify-content: center;
+  }
+}
